--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,16 +5,23 @@
   --background: #fafafa;
 }
 
-  body {
-    font-size: 16px;
-    font-family: 'Nunito Sans', sans-serif;
-    margin: 0;
-    padding: 0;
-    
-    background: var(--background);
-    min-height: 100vh;
-    color: var(--black);
-  }
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body {
+  font-size: 16px;
+  font-family: 'Nunito Sans', sans-serif;
+  margin: 0;
+  padding: 0;
+  
+  background: var(--background);
+  min-height: 100vh;
+  color: var(--black);
+}
   
 
   @media screen and (max-width: 768px) {
